Skip to content

[Coverity 1666281] Dereference null return value in libass.c

If the function actually returns a null value, a null pointer dereference will occur.

In OldEngineClunkyRollInfoPatch: Return value of function which returns null is dereferenced without checking (CWE-476)

      2. returned_null: vlc_stream_MemoryNew returns NULL (checked 15 out of 17 times).[show details]
      3. var_assigned: Assigning: p_memstream = NULL return value from vlc_stream_MemoryNew.
766    stream_t *p_memstream = vlc_stream_MemoryNew( p_dec, p_dec->fmt_in->p_extra,
767                                                  p_dec->fmt_in->i_extra, true );
     
CID 1666281: (#1 of 1): Dereference null return value (NULL_RETURNS)
4. dereference: Dereferencing a pointer that might be NULL p_memstream when calling vlc_stream_ReadLine.[show details]
768    char *s = vlc_stream_ReadLine( p_memstream );
769    unsigned playres[2] = {0, 0};
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information