libass: fix possible nullptr deref

vlc_stream_MemoryNew may return NULL. Which could be dereferenced
by vlc_stream_ReadLine calls in OldEngineClunkyRollInfoPatch.

Fixes: #29363 (Coverity 1666281)